kuber/01_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: health
  labels: 
    app: health
spec:
  containers:
  - name: hw1
    image: alekseybondarev/otus
    ports:
    - containerPort: 8000
