kuber/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alekseybondarev/otus:latest
spec:
  selector:
    app.kubernetes.io/name: otus
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
